fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -58,11 +58,6 @@
 	padding: 0;
 }
 
-.author-info-image:nth-of-type(n+2),
-.author-info-description:nth-of-type(n+2){
-	padding: 40px 20px 20px 20px;
-}
-
 
 @media (max-width: 820px) {
     .author-info-image {
